bank scrollbar and log retrieval bugfixes

--- a/style.css
+++ b/style.css
@@ -754,6 +754,10 @@ thead:after { /* space after bags in bank */
 	text-align: center;
 }
 
+#bankPage {
+	overflow-y: auto;
+}
+
 /*					*/
 /*		TRADE		*/
 /*					*/
